# design-patterns

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: DefaultCompilerOptionsAndWarnings.cmake  Testing.cmake
src/abstract_factory/: CMakeLists.txt  main.cpp  tests.cpp
src/abstract_factory/abstract_products/: abstract_factory.h  abstract_product_a.h  abstract_product_b.h
src/abstract_factory/client/: client.cpp  client.h
src/abstract_factory/product1/: factory1.h  product_a1.h  product_b1.h
src/abstract_factory/product2/: factory2.h  product_a2.h  product_b2.h
src/adapter/: CMakeLists.txt  main.cpp  tests.cpp
src/adapter/adaptee/: adaptee.cpp  adaptee.h
src/adapter/adapter/: adapter.cpp  adapter.h
src/adapter/client/: client.cpp  client.h
src/adapter/object_adapter/: CMakeLists.txt  main.cpp
src/adapter/object_adapter/adaptee/: adaptee.h
src/adapter/object_adapter/client/: client.cpp  client.h
src/bridge/: CMakeLists.txt  main.cpp  tests.cpp
src/bridge/abstraction/: abstraction.cpp  abstraction.h
src/bridge/client/: client.cpp  client.h
src/bridge/concrete_implementors/: concrete_implementor1.cpp  concrete_implementor1.h  concrete_implementor2.cpp  concrete_implementor2.h
src/bridge/implementor/: implementor.h
src/bridge/refined_abstractions/: refined_abstraction_a.cpp  refined_abstraction_a.h  refined_abstraction_b.cpp  refined_abstraction_b.h
src/command/: CMakeLists.txt
src/command/classes/: CMakeLists.txt  main.cpp
src/command/classes/client/: client_commands.h
src/command/classes/include/: command.h
src/command/classes/invoker/: invoker.cpp
src/command/classes/receiver/: receiver_commands.h
src/command/client/: client.cpp
src/command/examples/classes/: main.cpp
src/command/examples/functions/client/: client_commands.h
src/command/examples/with_classes/: CMakeLists.txt  tests.cpp
src/command/examples/with_classes/client/: client.cpp  client.h  client_commands.h
src/command/examples/with_classes/invoker/: invoker.h
src/command/examples/with_classes/receiver/: receiver.cpp  receiver.h
src/command/examples/with_functions/: CMakeLists.txt  main.cpp
src/command/examples/with_functions/client/: client.cpp  client.h  client_commands.cpp  client_commands.h
src/command/examples/with_functions/receiver/: receiver.h  receiver_commands.cpp  receiver_commands.h
src/command/functions/: CMakeLists.txt
src/command/functions/client/: client.cpp  client_commands.h
src/command/functions/invoker/: invoker.cpp  invoker.h
src/command/functions/receiver/: receiver.cpp  receiver_commands.h
src/command/include/: keyboard_events.h
src/command/invoker/: invoker.cpp  invoker.h
src/command/with_reference_semantics/: CMakeLists.txt  benchmark.cpp  main.cpp  tests.cpp
src/command/with_reference_semantics/calculator/: calculator.cpp  calculator.hpp
src/command/with_reference_semantics/command/: add.hpp  command.hpp  multiply.hpp
src/command/with_value_semantics/: CMakeLists.txt  benchmark.cpp  main.cpp  tests.cpp
src/command/with_value_semantics/calculator/: calculator.cpp  calculator.hpp
src/command/with_value_semantics/command/: add.hpp  command.hpp  multiply.hpp
src/state/: main.cpp
src/state/concrete_states/: concrete_state_a.cpp  concrete_state_a.h  concrete_state_b.cpp  concrete_state_c.cpp  concrete_state_c.h
src/state/context/: context.cpp  context.h
src/state/state/: state.h
src/state/with_return_state/: CMakeLists.txt  tests.cpp
src/state/with_return_state/concrete_states/: concrete_state_a.cpp  concrete_state_a.h  concrete_state_b.cpp  concrete_state_b.h  concrete_state_c.cpp  concrete_state_c.h
src/state/with_return_state/context/: context.cpp  context.h
src/state/with_return_state/state/: state.cpp  state.h
src/state/with_set_state/: CMakeLists.txt
src/state/with_set_state/concrete_states/: concrete_state_a.cpp  concrete_state_b.cpp  concrete_state_b.h  concrete_state_c.cpp
src/state/with_set_state/context/: context.cpp  context.h
src/state/with_set_state/state/: state.cpp  state.h
src/strategy/with_reference_semantics/: CMakeLists.txt  main.cpp  tests.cpp
src/strategy/with_reference_semantics/print_strategy/: json_circle_print_strategy.cpp  json_circle_print_strategy.hpp  json_rectangle_print_strategy.cpp  json_rectangle_print_strategy.hpp  print_strategy.hpp  simple_circle_print_strategy.cpp  simple_circle_print_strategy.hpp  simple_rectangle_print_strategy.cpp  simple_rectangle_print_strategy.hpp
src/strategy/with_reference_semantics/shape/: circle.hpp  rectangle.hpp  shape.hpp
src/strategy/with_value_semantics/: CMakeLists.txt  main.cpp  tests.cpp
src/strategy/with_value_semantics/print_strategy/: json_circle_print_strategy.cpp  json_circle_print_strategy.hpp  json_rectangle_print_strategy.cpp  json_rectangle_print_strategy.hpp  simple_circle_print_strategy.cpp  simple_circle_print_strategy.hpp  simple_rectangle_print_strategy.cpp  simple_rectangle_print_strategy.hpp
src/strategy/with_value_semantics/shape/: circle.hpp  rectangle.hpp
